--- a/RecupereJa/Views/Shared/_Layout.cshtml
+++ b/RecupereJa/Views/Shared/_Layout.cshtml
@@ -38,6 +38,32 @@
             @RenderBody()
         </main>
     </div>
+    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+        // 👇 new code
+        @if (User.Identity.IsAuthenticated)
+        {
+            // 👆 new 
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-dark display-6" asp-area=""
+                       asp-controller="Catalog"
+                       asp-action="Index">Catalog</a>
+                </li>
+            </ul>
+            // 👇 new code
+        }
+        else
+        {
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-dark display-6" asp-area=""
+                       asp-controller="Account"
+                       asp-action="Login">Login</a>
+                </li>
+            </ul>
+        }
+        // 👆 new code
+    </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
